# dtasks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads-hooks/: pre-commit  pre-push
.claude/: launch.json  settings.json
.claude/hooks/: session-start.sh
.github/workflows/: cd.yml  ci.yml
backend/: pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py  oauth.py  schemas.py  seed.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_multitenancy.py  0003_green_tasks.py  0004_oauth_accounts.py  0005_completed_at.py  0005_drop_recurring.py  0006_completed_at.py  0007_recurring_tasks.py
backend/tests/: conftest.py  test_auth.py  test_backup_db.py  test_db.py  test_habits.py  test_isolation.py  test_oauth.py  test_projects.py  test_recurrences.py  test_reset_password.py
chats/: chat1.md
docs/: auth.md  backup-storage.md  deploy.md  provision-vm.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  projects.spec.ts  review.spec.ts
infra/: .terraform.lock.hcl  cloud-init.yaml  compute.tf  network.tf  outputs.tf  providers.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
project/: .thumbnail  FlowTask.html
scripts/: backup_db.py  backup_sync.sh  reset_password.py
(+39 files in other folders)
