[project]
name = "jedi-tracker-backend"
version = "0.1.0"
description = "FlowTask — task tracker with habits, plan and review modes (Jedi Techniques)"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]>=2.13",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]
