[project]
name = "jedi-tracker-backend"
version = "0.1.0"
description = "DTask — task tracker with habits, plan and review modes (Jedi Techniques)"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]>=2.13",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "argon2-cffi>=25.1.0",
    "alembic>=1.18.5",
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.9",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 110
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

